manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shader
  namespace: triangular
spec:
  selector:
    matchLabels:
      app: shader
  replicas: 1
  template:
    metadata:
      labels:
        app: shader
    spec:
      containers:
        - name: shader-example-app
          image: registry.akehir.com:443/triangular/shader/shader-example-app:develop-e9b23bab-1733323393 # {"$imagepolicy": "triangular:shader-example-app-image-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8811
      imagePullSecrets:
        - name: deploy-triangular
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
