manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shader
  namespace: triangular
spec:
  selector:
    app: shader
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8811
